--- a/pages/geom_line.html
+++ b/pages/geom_line.html
@@ -12,10 +12,10 @@ Rovnú čiaru idúcu od nekonečna po nekonečno pozná každý z nás. Je to <b
 Každé dva body, ktoré si vyberieme, sa dajú spojiť jednou priamkou. Je to najkratšia vzdialenosť medzi nimi. Napríklad z Malaciek do Rimavskej Soboty je to vzdušnou čiarou (po priamke) 221 km. Po cestách musí auto prejsť 314 km. Keby vedelo lietať, cestu si skráti skoro o 100 km. No a cez každé dva body ide práve iba jedna priamka. Môžeme povedať, že <b>priamka je daná dvomi bodmi</b>.
 
 <h2>Vzájomná poloha priamok</h2>
-Priamky môžu byť <b>rovnobežné, rôznobežné a totožné</b>. Rovnobežné primaky sa nikde nepretnú. Z toho vyplýva, že nemajú žiaden bod spoločný. Rôznobežné priamky idú každá iným smerom a niekde sa pretnú v jednom bode. Majú teda spoločný iba jeden bod. Totožné priamky ležia na sebe a kvôli tomu majú všetky body spoločné.
+Priamky môžu byť <b>rovnobežné, rôznobežné a totožné</b>. Rovnobežné priamky sa nikde nepretnú. Z toho vyplýva, že nemajú žiaden bod spoločný. Rôznobežné priamky idú každá iným smerom a niekde sa pretnú v jednom bode. Majú teda spoločný iba jeden bod. Totožné priamky ležia na sebe a kvôli tomu majú všetky body spoločné.
 <figure>
   <img src="../assets/images/geom_lineParallelism.png" alt="Optická ilúzia Cafe wall">
-  <figcaption>Obr. 1.: Rovnobežnosť priamok. Na prvom obrázku <i>a)</i> sú rovnobežné priamky. Ani jeden bod nemajú spoločný. Na obrázku <i>b)</i> sú všetky štyri priamky rôznobežné. U nás na papiery sa síce nepretínajú, ale keďže sú nekonečne dlhé, tak sa niekde pretnú určite. Totožné priamky sú na obrázku <i>c)</i>. Majú všetky body rovnaké.</figcaption>
+  <figcaption>Obr. 1.: Rovnobežnosť priamok. Na prvom obrázku <i>a)</i> sú rovnobežné priamky. Ani jeden bod nemajú spoločný. Na obrázku <i>b)</i> sú všetky štyri priamky rôznobežné. U nás na papieri sa síce nepretínajú, ale keďže sú nekonečne dlhé, tak sa niekde pretnú určite. Totožné priamky sú na obrázku <i>c)</i>. Majú všetky body rovnaké.</figcaption>
 </figure>
 
 <h2>Využitie priamok</h2>
