--- a/pages/howNumbersWereBorn.html
+++ b/pages/howNumbersWereBorn.html
@@ -8,13 +8,13 @@ permalink: ako_vznikli_cisla
 <h1>Ako vznikli čísla</h1>
 
 <div class="content">
-Už praveký človek mal potrebu niečo počítať. Chcel si zrátať dni alebo ulovené zvieratá. Najskôr to rátal na prstoch. Postupom času však zvieratá pribúdali, a tak mu už nestačili jeho prsty, ani prsty jeho rodinny a nakoniec mu došli aj prsty kamarátov. Preto si začal robiť zárezy do kostí. To bolo zhruba 40 000 rokov pred našim letopočtom. Ako sa spoločnosť vyvíjala, nestačili mu už ani len tie kosti.<br /><br />
+Už praveký človek mal potrebu niečo počítať. Chcel si zrátať dni alebo ulovené zvieratá. Najskôr to rátal na prstoch. Postupom času však zvieratá pribúdali, a tak mu už nestačili jeho prsty, ani prsty jeho rodiny a nakoniec mu došli aj prsty kamarátov. Preto si začal robiť zárezy do kostí. To bolo zhruba 40 000 rokov pred našim letopočtom. Ako sa spoločnosť vyvíjala, nestačili mu už ani len tie kosti.<br /><br />
 
-Niekedy okolo roku 4 000 pred našim letopočtom začali ľudia používať na počítanie akési vypálené kúsky hliny. Na tie kúsky si napísali znak toho, čo počítali. Keď počítali napríklad ovce, písali znak, ktorý predstavoval ovce. Keď rátali kozy, tak napísali zase iný znak, znamenajuci kozy. Časom si títo ľudia uvedomili, že keď majú 1 000 oviec, tak spraviť 1 000 hlinených kúskov by bolo trochu náročné. Pomohli si znakmi. Pre 1 ovcu bol rozdielny znak, ako pre 10 oviec, a pre 100 oviec bol zase iný symbol, ako pre tých 10, a tak ďalej. Prispôsobili sa zvyšovania počtu kusov zvierat.<br /><br />
+Niekedy okolo roku 4 000 pred našim letopočtom začali ľudia používať na počítanie akési vypálené kúsky hliny. Na tie kúsky si napísali znak toho, čo počítali. Keď počítali napríklad ovce, písali znak, ktorý predstavoval ovce. Keď rátali kozy, tak napísali zase iný znak, znamenajúci kozy. Časom si títo ľudia uvedomili, že keď majú 1 000 oviec, tak spraviť 1 000 hlinených kúskov by bolo trochu náročné. Pomohli si znakmi. Pre 1 ovcu bol rozdielny znak, ako pre 10 oviec, a pre 100 oviec bol zase iný symbol, ako pre tých 10, a tak ďalej. Prispôsobili sa zvyšovania počtu kusov zvierat.<br /><br />
 
 Postupom času ľudia čísla opäť vylepšili. Prišli totiž na to, že mať iný znak pre ovcu, iný pre kozu, iný pre zajaca, iný pre to a iný pre tamto, je úplne zbytočné. Vymysleli teda znaky, ktoré reprezentovali iba počet. Tak prišli na svet prvé naozajstné čísla. Uzreli svetlo sveta okolo roku 3 100 pred našim letopočtom. [1] <br /><br />
 
-Týmto dátumom sme sa dostali až k starovekým civilizáciam. Egypťania, Mayovia, Rimania, Gréci, Sumeri, ale aj Slovania - títo všetci už poznali čísla. Boli to znaky, ktoré označovali určitý počet.
+Týmto dátumom sme sa dostali až k starovekým civilizáciám. Egypťania, Mayovia, Rimania, Gréci, Sumeri, ale aj Slovania - títo všetci už poznali čísla. Boli to znaky, ktoré označovali určitý počet.
 <figure>
   <img src="../assets/images/numSys_AncientNums.png" alt="Čísla starovekých národov.">
   <figcaption>Obr. 1.: Takto písali čísla ľudia veľmi dávno pred nami.</figcaption>
