--- a/pages/stat_data.html
+++ b/pages/stat_data.html
@@ -9,37 +9,34 @@ permalink: statistika_udaje
 
 <div class="content">
 <h2>Získavanie údajov</h2>
-Štatistika nie sú iba nejaké vzorce, ktorými sa dajú z dát vytiahnuť informácie. Štatistika začína už pri získavaní údajov. <br /><br /> 
+Štatistika nie sú iba nejaké vzorce, ktorými sa dajú z dát vytiahnuť informácie. Štatistika začína už pri získavaní údajov.<br /><br /> 
 
-Keď v škole počítaš príklad zo štatistiky, tak máš väčšinou údaje zadané. Napríklad niečo takéto: Učiteľ telocviku meral žiakom 5.A. čas na 100 metrov behu. Časy boli takéto: 28.5s, 30.1s, 25.6s, 48.2s atď. S údajmi teda nemáš žiadne starosti, iba ich zoberieš a vyrátaš to, čo od teba chcú. <br /><br />
+Keď v škole počítaš príklad zo štatistiky, tak máš väčšinou údaje zadané. Napríklad niečo takéto: Učiteľ telocviku meral žiakom 5.A. čas na 100 metrov behu. Časy boli takéto: 28.5s, 30.1s, 25.6s, 48.2s atď. S údajmi teda nemáš žiadne starosti, iba ich zoberieš a vyrátaš to, čo od teba chcú.<br /><br />
 
 V skutočnosti je získavanie údajov zložitejšie. Predstav si, že robíš na štatistickom úrade a chceš zistiť koľko zvierat priemerne chovajú Slováci (je to hlúposť, ale na príklad stačí. Pokojne si vymysli aj nejakú normálnejšiu otázku :D ). Spravíš si teda dotazník s otázkou a ideš od obyvateľstva získať údaje o počte chovaných zvierat.<br /><br />
 
-Myslíš, že sa spýtaš každého jedného obyvateľa Slovenska? Asi nebudeš mať možnosť obehať celé Slovensko. Musíš si teda vybrať iba zopár nejakých ľudí. Zistíš údaje iba o nejakej časti slovákov, nie o všetkých. Keď vypočítaš priemer z napr. 1000 Slovákov, môžeš povedať, že platí pre celú krajinu? Asi nie. To je prvý problém.<br /><br />
+Myslíš, že sa spýtaš každého jedného obyvateľa Slovenska? Asi nebudeš mať možnosť obehať celé Slovensko. Musíš si teda vybrať iba zopár nejakých ľudí. Zistíš údaje iba o nejakej časti Slovákov, nie o všetkých. Keď vypočítaš priemer z napr. 1000 Slovákov, môžeš povedať, že platí pre celú krajinu? Asi nie. To je prvý problém.<br /><br />
 
-Teda už máš vybratú vzorku. Ale vybral si ju správne? Keď vyberieš iba ľudí, ktorí žijú v bytoch, dostaneš trochu iný priemer, ako keď vyberieš iba farmárov. Takisto  deti budú chovať menej zvierat ako dospelí, takže keď budeš robiť priemer zo svojich kamarátov dostaneš iný priemer, akokeby si ho robil z rodičov alebo starých rodičov. Z tohto vyplýva, že nemôžeš do vzorky vyberať iba "rovnakých" ľudí. To je druhý problém. Dá sa vyriešiť tým, že do vzorky vyberieš z každého rožka troška. Spýtaš sa aj detí, aj dospelých, aj tých čo majú alergiu na srsť, aj tých čo zvieratá chovajú vo veľkom. Rôznorodú vzorku dostaneš tak, že ľudí povyberáš náhodne. Keď ti pomáha náhoda, je malá pravdepodobnosť, že do vzorky povyťahuješ rovnakých ľudí.<br /><br />
+Teda už máš vybratú vzorku. Ale vybral si ju správne? Keď vyberieš iba ľudí, ktorí žijú v bytoch, dostaneš trochu iný priemer, ako keď vyberieš iba farmárov. Takisto  deti budú chovať menej zvierat ako dospelí, takže keď budeš robiť priemer zo svojich kamarátov dostaneš iný priemer, ako keby si ho robil z rodičov alebo starých rodičov. Z tohto vyplýva, že nemôžeš do vzorky vyberať iba "rovnakých" ľudí. To je druhý problém. Dá sa vyriešiť tým, že do vzorky vyberieš z každého rožka troška. Spýtaš sa aj detí, aj dospelých, aj tých čo majú alergiu na srsť, aj tých čo zvieratá chovajú vo veľkom. Rôznorodú vzorku dostaneš tak, že ľudí povyberáš náhodne. Keď ti pomáha náhoda, je malá pravdepodobnosť, že do vzorky povyťahuješ rovnakých ľudí.<br /><br />
 
 Už máš vo vzorke aj rôznych ľudí, ale máš ju dostatočne veľkú? Veľkosť vzorky tiež vplýva na výsledky. Čím ju máš väčšiu, tým budú údaje presnejšie.<br /><br />
 
-Toto sú  také základné problémy, s ktorými sa štatistika stretá hneď na začiatku. S tým, že nemôžeš získať údaje od všetkých, naozaj nič nespravíš. Dá sa tomu pomôcť tým, že sa budeš snažiť mať vzorku čo najväčšiu. A tiež čo najrôznorodejšiu. <br /><br />
+Toto sú  také základné problémy, s ktorými sa štatistika stretá hneď na začiatku. S tým, že nemôžeš získať údaje od všetkých, naozaj nič nespravíš. Dá sa tomu pomôcť tým, že sa budeš snažiť mať vzorku čo najväčšiu. A tiež čo najrôznorodejšiu.
 
 <h2>Získanie údajov o futbalistoch</h2>
-Vráťme sa k nášmu problému, že chceš kúpiť futbalistov. Chceš ten najlepší klub, ale aby si mohol objektívne určiť, ktorý je ten najlepší, potrebuješ zistiť, kde hrajú tí najelpší futbalisti. <br /><br />
+Vráťme sa k nášmu problému, že chceš kúpiť futbalistov. Chceš ten najlepší klub, ale aby si mohol objektívne určiť, ktorý je ten najlepší, potrebuješ zistiť, kde hrajú tí najlepší futbalisti.<br /><br />
 
-Kvalitu futbalistu chceš tiež určiť objektívne a tak začneš o ňom zberať údaje. Začneš merať ako rýchlo behá, akú má silnú strelu, ako dobre prihráva, ako dobre vedie loptu a milión päť podobných vecí. Nebojsa, nemusíš teraz k sebe domov zavolať Ronalda a dať mu behať šesťdesiatku na čas. Meranie údajov už za teba urobili iný. Na <a href="https://www.youtube.com/watch?v=2T3BmvWIHy4&ab_channel=EASPORTSFIFA" target="_blank">videu</a> si môžeš pozrieť, ako to spravili. <br /><br />
+Kvalitu futbalistu chceš tiež určiť objektívne a tak začneš o ňom zberať údaje. Začneš merať ako rýchlo behá, akú má silnú strelu, ako dobre prihráva, ako dobre vedie loptu a milión päť podobných vecí. Nebojsa, nemusíš teraz k sebe domov zavolať Ronalda a dať mu behať šesťdesiatku na čas. Meranie údajov už za teba urobili iný. Na <a href="https://www.youtube.com/watch?v=2T3BmvWIHy4&ab_channel=EASPORTSFIFA" target="_blank">videu</a> si môžeš pozrieť, ako to spravili.<br /><br />
 
 Namerané údaje zapísali do tabuľky a zverejnili ju na internet [1]. My sme si ju odtiaľ stiahli, aby sme vás mohli trápiť so štatistikou. Takže údaje máme a môžeme si ich trochu poprezerať.
 
-
-
 <h2>Začiatok analýzy údajov o futbalistoch</h2>
-Ako správny štatistik, musíš sa na začiatku oboznámiť s tvojimi údajmi. Prvú vec, ktorú sme zisťovali, bola veľkosť údajov. Počítač nám vypísal, že máme 18 278 hráčov a každý má 104 atribútov. Aby si vedel, čo je atribút, tak je to nameraný údaj o futbalistovi. Napríklad jeho meno, plat, pozícia, tím, sila strely, rýchlosť a ďalších vyše sto podobných vecí. Pri výpočtoch nám bude pomáhať počítač, lebo ak by sme mali analyzovať 18 000 futbalistov na papier, tak by sme si ruky po lakte zodrali.<br /><br />
+Ako správny štatistik, musíš sa na začiatku oboznámiť s tvojimi údajmi. Prvú vec, ktorú sme zisťovali, bola veľkosť údajov. Počítač nám vypísal, že máme 18 278 hráčov a každý má 104 atribútov. Aby si vedel, čo je atribút, tak je to nameraný údaj o futbalistovi. Napríklad jeho meno, plat, pozícia, tím, sila strely, rýchlosť a ďalších vyše sto podobných vecí. Pri výpočtoch nám bude pomáhať počítač, lebo ak by sme mali analyzovať 18 000 futbalistov na papier, tak by sme si ruky po lakte zodrali.
 
 <figure>
   <img src="../assets/images/stat_RawData.png" alt="=Údaje o futbalistoch">
   <figcaption>Obr. 1.: Údaje o futbalistoch zapísané v tabuľke. Sú tu iba niektoré údaje o niektorých futbalistoch. Nezmestili sa všetky, pretože futbalistov je viac ako 18 000 a o každom futbalistovi je 104 údajov.</figcaption>
 </figure>
-
 
 Potom sme zisťovali aké máme údaje o futbalistoch. Počítač sme poprosili, aby nám vypísal názvy atribútov. Tu sú: 
 
@@ -51,11 +48,11 @@ sofifa_id, player_url, short_name, long_name, age, dob, height_cm, weight_kg, na
 </figure>
 <br /><br />
 
-Chceli sme vedieť čo, ktorý atribút znamená, a tak sme trochu googlili. Chceli sme nájsť atribút, ktorý bude reprezentovať celkovú kvalitu futbalistu a aj sme ho našli. Je to atribút <i>overall</i> [2]. Zistili sme o ňom, že môže mať hodnoty od 0 po 99 [3]. Čím je hodnota vyššia, tým je futbalista lepší. Messi s hodnotou 94 vedie rebríček. Za ním je Ronaldo s 93, Neymar s 92. Štvrtý Oblak a piaty Hazard majú zhodne po 91. Rebríček uzatvára posledný Pan Ximing s hodnotou 48. <br /><br />
+Chceli sme vedieť čo, ktorý atribút znamená, a tak sme trochu googlili. Chceli sme nájsť atribút, ktorý bude reprezentovať celkovú kvalitu futbalistu a aj sme ho našli. Je to atribút <i>overall</i> [2]. Zistili sme o ňom, že môže mať hodnoty od 0 po 99 [3]. Čím je hodnota vyššia, tým je futbalista lepší. Messi s hodnotou 94 vedie rebríček. Za ním je Ronaldo s 93, Neymar s 92. Štvrtý Oblak a piaty Hazard majú zhodne po 91. Rebríček uzatvára posledný Pan Ximing s hodnotou 48.<br /><br />
 
-Futbalistov sme priradili jednotlivým klubom, aby sme mohli zistiť, ktorý klub má najlepších futbalistov a ktorý teda chceme kúpiť. Zistli sme, že máme 668 klubov. <br /><br />
+Futbalistov sme priradili jednotlivým klubom, aby sme mohli zistiť, ktorý klub má najlepších futbalistov a ktorý teda chceme kúpiť. Zistili sme, že máme 668 klubov.<br /><br />
 
-Na jedenástich futbalistoch Interu Milano budeme vysvetľovať vzorce, tak ti ich sem napíšeme, nech vieš s akými údajmi počítame. Opíš si ich niekde vedľa na papier, nech sa nemusíš stále preklikávať. <br /><br />
+Na jedenástich futbalistoch Interu Milano budeme vysvetľovať vzorce, tak ti ich sem napíšeme, nech vieš s akými údajmi počítame. Opíš si ich niekde vedľa na papier, nech sa nemusíš stále preklikávať.<br /><br />
 <table class="center">
 <tr>
 <th>Meno hráča</th>
@@ -119,9 +116,7 @@ Na jedenástich futbalistoch Interu Milano budeme vysvetľovať vzorce, tak ti i
 </table>
 <br />
 
-
 Máme už údaje o futbalistoch, máme atribút, ktorý definuje ako je futbalista dobrý, ale stále nevieme, ktorý tím je ten naj. Na to, aby sme sa to dozvedeli, treba vedieť niečo zo štatistiky.
-
 
 <h1>Zdroje</h1>
 
