--- a/pages/stat_playerAnalysis.html
+++ b/pages/stat_playerAnalysis.html
@@ -86,7 +86,7 @@ Možno Juventus má jedného alebo zopár slabších hráčov, pretože má prie
 
 Ďalšie na rade sú miery variability. Tie nám hovoria o tom, ako veľmi sú hráči rozdielny. Či je ich <i>overall</i> zhruba na rovnakej úrovni alebo sú tam lepší a horší. Asi chceme tím s čo najmenšou variabilitou, pretože hráčom na jednej úrovni sa hrá spolu lepšie ako hráčom, kde sú niektorí príliš slabý a niektorí príliš silný.<br /><br />
 
-Prvé, najľahšie čo môžeme vypočítať je variančné rozpätie. Najmenej rozdielny hráči vyzerajú byť v Leverkusene, ale stále treba mať na pamäti, že variančné rozpätie je citlivé na outlierov, tak sme preistotu vypočítali aj priemernú absolútnu odchýlku, rozptyl a smerodajnú odchýlku. Všetky tri nám potvrdily, že najmenej rozdielny sú hráči Leverkusenu. Po započítaní veľkých odchýlok od priemeru vyšla smerodajná odchýlka ani nie o 1 menšia od priemernej absolútnej chyby. Ani pri ostatných tímoch sa smerodajná odchýlka veľmi nelíšili od priemernej absolútnej odchýlky. Veľké rozdiely tam nie sú, tak aj miery variability potvrdili, že v tímoch sú vyrovnaný hráči.<br /><br />
+Prvé, najľahšie čo môžeme vypočítať je variačné rozpätie. Najmenej rozdielny hráči vyzerajú byť v Leverkusene, ale stále treba mať na pamäti, že variačné rozpätie je citlivé na outlierov, tak sme pre istotu vypočítali aj priemernú absolútnu odchýlku, rozptyl a smerodajnú odchýlku. Všetky tri nám potvrdili, že najmenej rozdielny sú hráči Leverkusenu. Po započítaní veľkých odchýlok od priemeru vyšla smerodajná odchýlka ani nie o 1 menšia od priemernej absolútnej chyby. Ani pri ostatných tímoch sa smerodajná odchýlka veľmi nelíšili od priemernej absolútnej odchýlky. Veľké rozdiely tam nie sú, tak aj miery variability potvrdili, že v tímoch sú vyrovnaný hráči.<br /><br />
 
 Ak by si vedel, z akých dát sme počítali štatistiky, tak tu sú <i>overall</i> pre tímy: <br />
 <b>FC Bayern München:</b> 89,  88, 87, 86, 86, 86, 85, 85, 84, 84, 84, 84, 84, 84, 84, 83, 79, 79, 75, 72, 72, 67, 63 <br />
@@ -124,7 +124,5 @@ Aby si vedel, že do štatistiky patria aj grafy, tak sme ich zopár spravili pr
   <img src="../assets/images/stat_scatterGraph.png" alt="Korelácia medzi schopnosťou strieľať a ">
   <figcaption>Obr. 5.: Tento graf zobrazuje závislosť medzi schopnosťou strieľať a brániť. Hráči, ktorí majú vysoký počet bodov pre bránenie, majú nízky počet bodov pre strieľanie a naopak. Môžeme usúdiť, že čím lepší obranca, tým horšie strieľa.</figcaption>
 </figure>
-
-
 
 </div>
