--- a/pages/vocabulary.html
+++ b/pages/vocabulary.html
@@ -40,19 +40,19 @@ permalink: matematicko-slovensky_slovnik
 
 <div class='vocabLetter'>L</div>
 <div class='vocabEntry'>
-<b>Lineárny</b> <div>V Synonimickom slovníku slovenčiny [2] nájdeme, že slovo lineárny, znamená priamočiary, rovný. Od tohto slova je odvodený aj názov lineárnej funkcie. Ak niečo rastie (alebo klesá) lineárne, znamená to, že sa to zväčšuje (zmenšuje) v každom kroku o rovnakú časť (napr. keď si každý mesiac odložíš rovnakú sumu, tak tvoja našetrená suma rastie linárne). Pri takomto raste vzniká v grafe rovná čiara, preto sa rast nazýva linárny.</div>
+<b>Lineárny</b> <div>V Synonymickom slovníku slovenčiny [2] nájdeme, že slovo lineárny, znamená priamočiary, rovný. Od tohto slova je odvodený aj názov lineárnej funkcie. Ak niečo rastie (alebo klesá) lineárne, znamená to, že sa to zväčšuje (zmenšuje) v každom kroku o rovnakú časť (napr. keď si každý mesiac odložíš rovnakú sumu, tak tvoja našetrená suma rastie lineárne). Pri takomto raste vzniká v grafe rovná čiara, preto sa rast nazýva lineárny.</div>
 </div>
 
 <div class='vocabLetter'>R</div>
 
 <div class='vocabEntry'>
-<b>Relatívny</b> <div>V Synonimickom slovníku slovenčiny [2] nájdeme, že slovo relatívny, znamená niečo, čo je je vo vzťahu k niečomu, vzťažné, podmienené. V praxi to znamená niečo takéto. Máme 10 jabĺk. To je absolútne množstvo jabĺk, lebo nevieme o tom povedať, či je to veľa alebo málo. Relatívne množstvo to začne byť vtedy, keď to na niečo vztiahneme. Napríklad na počet detí, ktorým jablká rozdelíme. Keď to dáme na desiatu jednému, asi mu aj zle z toho príde. Keď to rozdelíme pre 1 000 detí, tak sa nikomu neujde skoro nič. Desať jabĺk je vzhľadom na jedno dieťa veľa. Desať jabĺk je vzhľadom na 1 000 detí málo. To je tá relativita.</div>
+<b>Relatívny</b> <div>V Synonymickom slovníku slovenčiny [2] nájdeme, že slovo relatívny, znamená niečo, čo je je vo vzťahu k niečomu, vzťažné, podmienené. V praxi to znamená niečo takéto. Máme 10 jabĺk. To je absolútne množstvo jabĺk, lebo nevieme o tom povedať, či je to veľa alebo málo. Relatívne množstvo to začne byť vtedy, keď to na niečo vztiahneme. Napríklad na počet detí, ktorým jablká rozdelíme. Keď to dáme na desiatu jednému, asi mu aj zle z toho príde. Keď to rozdelíme pre 1 000 detí, tak sa nikomu neujde skoro nič. Desať jabĺk je vzhľadom na jedno dieťa veľa. Desať jabĺk je vzhľadom na 1 000 detí málo. To je tá relativita.</div>
 </div>
 
 <div class='vocabLetter'>S</div>
 <div class='vocabEntry'>
 <b><a id="vocabSuma">Suma $\sum$</a></b> <div>
-Suma je len vznešene zapísané spočítavanie. Keď potrebuješ spočítať nejaké čísla, napr. od 1 po <i>n</i>, tak nemusíš príklad zapísať ako 1+2+3+...+<i>n</i>, ale zapíšeš ich sumou $\sum_{i=1}^{n} i$. Tento zápis znamená asi toto: znak $\sum$ hovorí, že ideme spočítavať. Pod sumou je písmeno <i>i</i> a nad sumou je <i>n</i>. <i>i</i> hovorí, že odkiaľ sa začína spočítavať a <i>n</i> po kiaľ. Postupne sa prechádzajú všetky čísla od <i>i</i> po <i>n</i>, dosadia sa za <i>i</i> do sumy a pripočítava sa to k výsledku. Napríklad sčítanie čísiel do 10 sa zapíše takto: $\sum_{i=1}^{10} i$. V hlave alebo na kalkulačke sa počíta stále rovnako 1+2+3+4+5+6+7+8+9+10=55. Nemusí sa sčítavať iba <i>i</i>, ale môže sa použiť aj ako index k dátam. Ak treba spočítať známky žiakov a spraviť z nich priemer, <i>i</i> bude ako poradové číslo žiaka. Spočítavanie sa zapíše pomocou sumy $\sum_{i=1}^{n} známka\_žiaka_i$. Fungovať to bude tak, že sa zoberie známka prvého žiaka, pripočíta sa k nej známka druhého a postupne sa pripočítajú známky všetkých žiakov. Nie vždy sa zrátavajú známky žiakov, preto ho nahradíme všeobecným zápisom - písmenom <i>x</i>. Suma bude vyzerať $\sum_{i=1}^{n} x_i$. Niekedy sa môže stať, že pred tým, než x pripočítame k ostatným, treba s ním niečo spraviť. Napríklad dať ho na druhú, spraviť z neho sínus alebo použiť naň nejakú inú funkciu. Naríklad chceme spočítavať <i>sin(x)</i>. Suma bude vyzerať takto: $\sum_{i=1}^{n} sin(x_i)$. Tu sa zoberie každý údaj x, spraví sa z neho sínus a pripočíta sa k ostatným.
+Suma je len vznešene zapísané spočítavanie. Keď potrebuješ spočítať nejaké čísla, napr. od 1 po <i>n</i>, tak nemusíš príklad zapísať ako 1+2+3+...+<i>n</i>, ale zapíšeš ich sumou $\sum_{i=1}^{n} i$. Tento zápis znamená asi toto: znak $\sum$ hovorí, že ideme spočítavať. Pod sumou je písmeno <i>i</i> a nad sumou je <i>n</i>. <i>i</i> hovorí, že odkiaľ sa začína spočítavať a <i>n</i> pokiaľ. Postupne sa prechádzajú všetky čísla od <i>i</i> po <i>n</i>, dosadia sa za <i>i</i> do sumy a pripočítava sa to k výsledku. Napríklad sčítanie čísiel do 10 sa zapíše takto: $\sum_{i=1}^{10} i$. V hlave alebo na kalkulačke sa počíta stále rovnako 1+2+3+4+5+6+7+8+9+10=55. Nemusí sa sčítavať iba <i>i</i>, ale môže sa použiť aj ako index k dátam. Ak treba spočítať známky žiakov a spraviť z nich priemer, <i>i</i> bude ako poradové číslo žiaka. Spočítavanie sa zapíše pomocou sumy $\sum_{i=1}^{n} známka\_žiaka_i$. Fungovať to bude tak, že sa zoberie známka prvého žiaka, pripočíta sa k nej známka druhého a postupne sa pripočítajú známky všetkých žiakov. Nie vždy sa zrátavajú známky žiakov, preto ho nahradíme všeobecným zápisom - písmenom <i>x</i>. Suma bude vyzerať $\sum_{i=1}^{n} x_i$. Niekedy sa môže stať, že pred tým, než x pripočítame k ostatným, treba s ním niečo spraviť. Napríklad dať ho na druhú, spraviť z neho sínus alebo použiť naň nejakú inú funkciu. Napríklad chceme spočítavať <i>sin(x)</i>. Suma bude vyzerať takto: $\sum_{i=1}^{n} sin(x_i)$. Tu sa zoberie každý údaj x, spraví sa z neho sínus a pripočíta sa k ostatným.
 </div></div>
 
 <div class='vocabLetter'>V</div>
@@ -76,7 +76,5 @@ Suma je len vznešene zapísané spočítavanie. Keď potrebuješ spočítať ne
 
 [2] Synonymický slovník slovenčiny. 2004. https://slovnik.juls.savba.sk <br /><br />
 </div>
-
-
 
 </div>
