--- a/pages/aGeom_coorSys.html
+++ b/pages/aGeom_coorSys.html
@@ -8,7 +8,6 @@ permalink: analyticka_geometria_suradnicova_sustava
 <h1>Súradnicová sústava</h1>
 
 <div class="content">
-
 Sústavu súradníc ani slovami opísať nevieme, tak hneď začneme obrázkom.
 
 <figure>
@@ -16,16 +15,16 @@ Sústavu súradníc ani slovami opísať nevieme, tak hneď začneme obrázkom.
   <figcaption>Obr. 1.: Karteziánska súradnicová sústava. Hore je pre trojrozmerný priestor a dolu pre dvojrozmerný priestor.</figcaption>
 </figure>
 
-To, čo je na obrázku sa nazýva Karteziánska súradnicová sústava. Je to najpoužívanejší typ a bežne sa s ním môžeš stretnúť v rôznych článkoch, kde sú nejaké grafy. Karteziánska preto, lebo Descartes. Minule sme si o tomto človiečikovi napísali viac, tak teraz len v skratke. René Descartes bol francúzsky matematik, ktorý sa zaoberal analytickou geometriou. Jeho meno je po latinsky Renatus Cartesius a súradnicová sústava je pomenovaná na jeho počesť.<br /><br />
+To, čo je na obrázku sa nazýva <b>Karteziánska súradnicová sústava</b>. Je to najpoužívanejší typ a bežne sa s ním môžeš stretnúť v rôznych článkoch, kde sú nejaké grafy. Karteziánska preto, lebo Descartes. <a href="vznik_analytickej_geometrie" target="_blank">Minule</a> sme si o tomto človiečikovi napísali viac, tak teraz len v skratke. René Descartes bol francúzsky matematik, ktorý sa zaoberal analytickou geometriou. Jeho meno je po latinsky Renatus Cartesius a súradnicová sústava je pomenovaná na jeho počesť.<br /><br />
 
-Súradnicová sústava sa skladá z osí, ktoré prechádzajú začiatkom. Osí je toľko, koľko je rozmerný priestor. Sú na seba kolmé. Pre každú os treba na nej vyznačiť jednotky. Osi môžu mať rôzne jednotky. Jedna os môže zobrazovať metre, druhá centimetre a tretia sekundy. Karteziánsky súradnicový systém môžeš vidieť v geometrií, pri matematických funkciách, vo fyzike pri znázorňovaní vzťahov, pri rôznych grafoch, ale aj v počítačovej grafike.<br /><br />
+<b>Súradnicová sústava sa skladá z osí</b>, ktoré prechádzajú začiatkom. Osí je toľko, koľko je rozmerný priestor. <b>Sú na seba kolmé</b>. Pre každú os treba na nej vyznačiť jednotky. <b>Osi môžu mať rôzne jednotky</b>. Jedna os môže zobrazovať metre, druhá centimetre a tretia sekundy. Karteziánsky súradnicový systém môžeš vidieť v geometrií, pri matematických funkciách, vo fyzike pri znázorňovaní vzťahov, pri rôznych grafoch, ale aj v počítačovej grafike.
 
 <h2>Bod</h2>
-V súradnicovej sústave vieme zobraziť body. Každý bod má presné súradnice, kde sa v danom priestore nachádza. Súradnice zapisujeme do hranatých zátvoriek. Najprv sa zapíše súradnica na osi x, potom na osi y a ak je, tak nakoniec na osi z. Body označujeme veľkými písmenami.
+V súradnicovej sústave vieme zobraziť body. <b>Každý bod má presné súradnice</b>, kde sa v danom priestore nachádza. Súradnice zapisujeme do hranatých zátvoriek. Najprv sa zapíše súradnica na osi <i>x</i>, potom na osi <i>y</i> a ak je, tak nakoniec na osi <i>z</i>. Body označujeme veľkými písmenami.
 
 <figure>
   <img src="../assets/images/aGeom_coorSystemsPoint.png" alt="Bod v karteziánskej sústave súradníc">
-  <figcaption>Obr. 2.: Súradnice bodu sa značia ako A[x,y,z]. Bod B je iba v dvojrozmernom priestore, tak súradnica z mu chýba.</figcaption>
+  <figcaption>Obr. 2.: Súradnice bodu sa značia ako <i>A[x,y,z]</i>. Bod <i>B</i> je iba v dvojrozmernom priestore, tak súradnica <i>z</i> mu chýba.</figcaption>
 </figure>
 
 </div>
